# ejemplos-concurrentes

./: README.md
practicas/1-intro/: Cargo.toml
practicas/1-intro/examples/: enums.rs  funciones.rs  heap.rs  helloworld.rs  option.rs  ownwership.rs  ownwership_2.rs  structs.rs  tests.rs  threads.rs  traits.rs
practicas/10-transact/: Cargo.toml
practicas/10-transact/examples/: twophase_coordinator.rs  twophase_stakeholder.rs
practicas/2-forkjoin/: Cargo.toml
practicas/2-forkjoin/data/: wordcount2.txt
practicas/2-forkjoin/examples/: mergesort.rs  mergesort_ryon.rs  wordcount.rs  wordcountpar.rs
practicas/2-vectorizacion/: CUDA.ipynb  Cargo.toml
practicas/3-async/: Cargo.toml
practicas/4-locks/: Cargo.toml
practicas/5-sincronizacion/: Cargo.toml
practicas/6-petri/: banquero.xml  barbero.xml  filosofos.xml  lector-escritor.xml  mutex.xml
practicas/7-channels-actores/: Cargo.toml
practicas/8-sockets/: Cargo.toml
practicas/8-sockets/examples/: centralizedmutex.rs  distributedmutex.rs  helloworld_client.rs  helloworld_server.rs  helloworld_server_actix.rs  helloworld_server_async.rs  tokenring.rs
practicas/9-leader/: Cargo.toml
practicas/z-testing/: Cargo.toml
practicas/z-testing/examples/: actores.rs  helloworld.rs  mock_use.rs  mock_use_pre.rs  mocks.rs  race.rs  race_loom.rs  race_manual.rs  solid.rs  solid_refactor.rs
teoricas/2-forkjoin/: Cargo.toml
teoricas/4-locks/: Cargo.toml  file.txt
teoricas/4-locks/examples/: arc.rs  arc_atomic.rs  rc.rs  rwlock_deadlock.rs  rwlock_guard.rs
teoricas/4-locks/src/example3/: main.rs
teoricas/4-locks/src/example4/: main.rs
teoricas/4-locks/src/example5/: main.rs
teoricas/5-sincronizacion/: Cargo.toml
teoricas/5-sincronizacion/examples/: barriers.rs  semaforos1.rs  semaforos2.rs  semaforos3.rs
teoricas/7-channels/: Cargo.toml
(+88 files in other folders)
