[package]
name = "sockets"
version = "0.1.0"
edition = "2018"

[dependencies]
rand = "0.8.5"
std-semaphore = "0.1"
tokio = { version = "^1", features = ["full"] }
quote = "1.0.27"
tokio-stream = { version = "^0.1.14", features = ["io-util"] }
actix = "0.13.0"
actix-rt = "2.0" # <-- Runtime for actix
