[package]
name = "testing"
version = "0.1.0"
edition = "2018"

[dependencies]
rand = "0.7"
mockall_double = "0.2.0"

[target.'cfg(not(loom))'.dependencies]
actix = "0.12.0"
actix-rt = "2.0"

[dev-dependencies]
mockall = "0.10.2"
lazy_static = "1.4.0"
serial_test = "*"
ntest = "*"
futures-channel = "*"
tokio = "*"


[target.'cfg(loom)'.dependencies]
loom = "0.5"